--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,16 @@
   "description": "Draw, erase, and annotate on any web page!",
   "permissions": ["activeTab", "scripting", "storage"],
   "action": {
-    "default_title": "Draw on Screen"
+    "default_title": "Draw on Screen",
+    "default_icon": "./assets/icon.png"
   },
   "background": {
     "service_worker": "background.js"
+  },
+  "icons": {
+    "16": "./assets/icon.png",
+    "48": "./assets/icon.png",
+    "128": "./assets/icon.png"
   },
   "commands": {
     "toggle-draw": {
